Moving all connector code to subprojec
No functional changes. Will start separating things out into other subprojects next to modularize the codebase, including the test-app.